[package]
name = "leveleditor"
version = "0.1.0"
authors = ["Jordan McLeod <jordanmcleod@example.com>"]

[dependencies]
nfd = "0.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = {version = "0.2", default-features = false}
piston = "0.42.0"
piston2d-opengl_graphics = "0.59.0"
piston2d-graphics = "0.30.0"
piston2d-touch_visualizer = "0.16.0"

[dependencies.pistoncore-sdl2_window]
version = "0.55.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.49.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.54.0"
optional = true

[features]
default = ["include_glutin"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]